Call service from Page_Load.

--- a/BuildWebDeployPackage/Web.config
+++ b/BuildWebDeployPackage/Web.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="ServiceUri" value="http://localhost:64266/api/debug" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
