Remove service. Use MyConfigOption

--- a/BuildWebDeployPackage/Web.Release.config
+++ b/BuildWebDeployPackage/Web.Release.config
@@ -2,7 +2,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   
   <appSettings>
-    <add key="ServiceUri" value="http://localhost:64266/api/release" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="MyConfigOption" value="release" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
   
 </configuration>
