--- a/BuildWebDeployPackage/Web.Stage.config
+++ b/BuildWebDeployPackage/Web.Stage.config
@@ -2,7 +2,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
   <appSettings>
-    <add key="ServiceUri" value="http://localhost:64266/api/stage" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="MyConfigOption" value="stage" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
 </configuration>
