--- a/BuildWebDeployPackage/Web.config
+++ b/BuildWebDeployPackage/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="ServiceUri" value="http://localhost:64266/api/debug" />
+    <add key="MyConfigOption" value="debug" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
