--- a/BuildWebDeployPackage/packages.config
+++ b/BuildWebDeployPackage/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
+  <package id="MSBuildTasks" version="1.5.0.196" targetFramework="net461" developmentDependency="true" />
 </packages>
